# mcp-jumpserver-gui-sucks

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: auth-state-format.md  cli-login-flow.md  live-instance-recon.md  web-terminal-flow.md
src/mcp_jumpserver_gui_sucks/: __init__.py  auth_refresh.py  auth_state.py  captcha.py  cli.py  cli_login.py  client.py  config.py  crypto.py  errors.py  http_signature.py  koko.py  logging_utils.py  server.py  service.py  session_store.py  terminal_manager.py
tests/: test_terminal_account_resolution.py  test_terminal_manager.py
